--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "mysql2": "latest"
     },
     "engines": {
-        node: "12.13.0"
+        "node": "12.13.0"
     },
     "devDependencies": {},
     "scripts": {
